[package]
name = "ntm"
version = "0.5.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.31", features = ["derive"] }
hex-string = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.200"
serde_json = "1.0.116"
sha2 = "0.10.8"
tempdir = "0.3.7"
toml = "0.8.20"
